--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -4,19 +4,14 @@
 name: Code tests
 
 on:
-  push:
-    branches:
-    - master
   pull_request:
-    branches:
-    - master
 
 jobs:
   build:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: [ 3.7, 3.8, 3.9 ]
+        python-version: [ "3.10", "3.11", "3.12", "3.13" ]
 
     steps:
     - uses: actions/checkout@v2
