--- a/tests/requirements.txt
+++ b/tests/requirements.txt
@@ -1,7 +1,7 @@
 pytest>=7.0.1
 keybert>=0.5.0
 flair>=0.15.0
-scipy==1.7.3
+scipy>=1.7.3
 bertopic>=0.16.1
 scikit-learn>=1.0.1
-umap-learn==0.5.4
+umap-learn>=0.5.4
