--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -4,22 +4,17 @@
 name: Code tests
 
 on:
-  push:
-    branches:
-    - master
   pull_request:
-    branches:
-    - master
 
 jobs:
   build:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: [ 3.7, 3.8, 3.9 ]
+        python-version: [ "3.10", "3.11", "3.12", "3.13" ]
 
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v4
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v1
       with:
